# verbio-test

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TASK.md  docker-compose.dependencies.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/actions/install/: action.yaml
.github/workflows/: build.yml  lint.yml  test.yml
config/: development.yaml
docs/decision-records/: detection-job.md  template.md
src/app/: __init__.py  application.py  container.py  fast_api.py  logger.py  utils.py
src/app/dependency/: __init__.py  manager.py
src/app/instances/: api.py
src/app/rabbitmq/: __init__.py  command_executor.py  container.py  fast_stream.py  settings.py  subscriber.py
src/config/: __init__.py  api.py  app.py
src/module/: container.py  providers.py
src/module/common/: command.py  container.py  projection.py  query.py
src/module/common/domain/: aggregates.py  command_executor.py  entities.py  event_publisher.py  events.py  values.py
src/module/detector/: __init__.py  container.py  types.py
src/module/detector/alghorithms/: palindrom_detection.py
src/module/detector/command/: __init__.py  delete_detection.py  execute_detection_algorithm.py  request_new_detection.py
src/module/detector/domain/: text_detection_algorithm.py  value_objects.py
src/module/detector/query/: __init__.py  find_detection.py  (+2 more)
tests/: helpers.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py
tests/integration/eventbus/: conftest.py  test_container.py
(+31 files in other folders)
